--- a/pallets/balances/Cargo.toml
+++ b/pallets/balances/Cargo.toml
@@ -19,17 +19,17 @@ version = '1.0.126'
 [dev-dependencies.sp-core]
 default-features = false
 git = 'https://github.com/paritytech/substrate.git'
-
+version = "4.0.0-dev"
 
 [dev-dependencies.sp-io]
 default-features = false
 git = 'https://github.com/paritytech/substrate.git'
-
+version = "4.0.0-dev"
 
 [dev-dependencies.sp-runtime]
 default-features = false
 git = 'https://github.com/paritytech/substrate.git'
-
+version = "4.0.0-dev"
 
 [dependencies.codec]
 default-features = false
@@ -41,16 +41,22 @@ version = '2.0.0'
 default-features = false
 git = 'https://github.com/paritytech/substrate.git'
 optional = true
-
+version = "4.0.0-dev"
 
 [dependencies.frame-support]
 default-features = false
 git = 'https://github.com/paritytech/substrate.git'
-
+version = "4.0.0-dev"
 
 [dependencies.frame-system]
 default-features = false
 git = 'https://github.com/paritytech/substrate.git'
+version = "4.0.0-dev"
+
+[dependencies.scale-info]
+version = "1.0"
+default-features = false
+features = ["derive"]
 
 
 [features]
@@ -61,5 +67,6 @@ std = [
     'frame-support/std',
     'frame-system/std',
     'frame-benchmarking/std',
+    'scale-info/std',
 ]
 try-runtime = ['frame-support/try-runtime']
