--- a/scripts/tmux/para.yaml
+++ b/scripts/tmux/para.yaml
@@ -11,8 +11,8 @@ windows:
       - shell_command:
         - sleep 10
         - ./start-rococo-bob.sh
-      - shell_command:
-        - sleep 20
-        - para/target/release/parachain-collator --alice --collator --force-authoring --tmp/para --dev --port 30335 --ws-port 9945 --rpc-port 9935 \
-          --execution wasm -- --execution wasm --chain tmp/rococo-local-chain-spec.json --port 30336 --ws-port 9946 --rpc-port 9936 \
-          --bootnodes /ip4/127.0.0.1/tcp/30333/p2p/
+      # - shell_command:
+      #   - sleep 20
+      #   - para/target/release/parachain-collator --alice --collator --force-authoring --tmp/para --dev --port 30335 --ws-port 9945 --rpc-port 9935 \
+      #     --execution wasm -- --execution wasm --chain tmp/rococo-local-chain-spec.json --port 30336 --ws-port 9946 --rpc-port 9936 \
+      #     --bootnodes /ip4/127.0.0.1/tcp/30333/p2p/
