--- a/para/runtime/Cargo.toml
+++ b/para/runtime/Cargo.toml
@@ -22,8 +22,10 @@ scale-info = { version = "2.1.1", default-features = false, features = ["derive"
 serde = { version = "1.0.137", optional = true, features = ["derive"] }
 smallvec = "1.6.1"
 
-# Local
+# customer pallets
 pallet-template = { path = "../pallets/template", default-features = false }
+play-balances = {default-features = false, path = "../../pallets/balances"}
+pallet-offchain-worker = {default-features = false, path = "../../pallets/offchain-worker"}
 
 # Substrate
 frame-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true, branch = "polkadot-v0.9.23" }
