--- a/pallets/balances/Cargo.toml
+++ b/pallets/balances/Cargo.toml
@@ -24,6 +24,9 @@ frame-system = { version = "4.0.0-dev", default-features = false, git = "https:/
 sp-runtime = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
 
 
+pallet-balances = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
+
+
 [dev-dependencies]
 sp-core = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
 sp-io = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
@@ -39,6 +42,7 @@ std = [
     'frame-system/std',
     'frame-benchmarking/std',
     'scale-info/std',
+    'pallet-balances/std',
 ]
 try-runtime = ['frame-support/try-runtime']
 
